# models/users.js
@@ -1,6 +1,15 @@
 const mongoose = require('mongoose');
 
 const userSchema = new mongoose.Schema({
+    githubId: {
+        type: String,
+    },
+    name: {
+        type: String,
+        required: true,
+        trim: true,
+        minLength: 2,
+    },
     username: {
         type: String,
         required: true,
@@ -9,7 +18,7 @@ const userSchema = new mongoose.Schema({
     },
     password: {
         type: String,
-        required: true,
+        // required: true,
         match: [
             /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[\W_]).{5,}$/,
             'Password must be at least 5 characters long and include at least one uppercase letter, one lowercase letter, one number, and one special character',
@@ -17,7 +26,7 @@ const userSchema = new mongoose.Schema({
     },
     email: {
         type: String,
-        required: true,
+        // required: true,
         lowercase: true,
         trim: true,
         match: [/\S+@\S+\.\S+/, 'Email is invalid'],
@@ -26,6 +35,7 @@ const userSchema = new mongoose.Schema({
         type: String,
         required: true,
         enum: ['admin', 'staff', 'employee'],
+        default: 'employee',
     },
 });
 
