# routes/users.js
@@ -1,15 +1,16 @@
 const router = require('express').Router();
 const controller = require('../controllers/users');
 const { validateUser } = require('../utilities/validateUser');
+const { isAuthenticated } = require('../auth/authenticate');
 
 router.get('/', controller.getAll);
 
 router.get('/:id', controller.getSingle);
 
-router.post('/', validateUser, controller.createUser);
+router.post('/', isAuthenticated, validateUser, controller.createUser);
 
-router.put('/:id', validateUser, controller.updateUser);
+router.put('/:id', isAuthenticated, validateUser, controller.updateUser);
 
-router.delete('/:id', controller.deleteUser);
+router.delete('/:id', isAuthenticated, controller.deleteUser);
 
 module.exports = router;
