# utilities/validateUser.js
@@ -1,6 +1,11 @@
 const Joi = require('joi');
 
 const userSchema = Joi.object({
+    githubId: Joi.string().trim(),
+    name: Joi.string().trim().min(2).max(100).required().messages({
+        'string.base': 'A valid name is required',
+        'string.min': "Name can't be a single letter",
+    }),
     username: Joi.string().trim().min(5).max(50).required().messages({
         'string.base': 'A valid username is required',
         'string.min': 'Username must be at least 5 characters long',
@@ -8,13 +13,13 @@ const userSchema = Joi.object({
     }),
     password: Joi.string()
         .trim()
-        .pattern(/^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[\W_]).{5,}$/)
-        .required()
-        .messages({
-            'string.base': 'A valid password is required',
-            'string.pattern': 'Password must match the required pattern',
-        }),
-    email: Joi.string().email().trim().lowercase().required(),
+        .pattern(/^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[\W_]).{5,}$/),
+    //.required()
+    // .messages({
+    //     'string.base': 'A valid password is required',
+    //     'string.pattern': 'Password must match the required pattern',
+    // })
+    email: Joi.string().email().trim().lowercase(),
     role: Joi.string().valid('admin', 'staff', 'employee').required(),
 });
 
